--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -78,7 +78,7 @@ li {
 .header {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 4;
   width: 100%;
   background-color: #fff;
   box-shadow: 0 5px 10px -6px rgba(0,0,0,.1);
@@ -354,12 +354,6 @@ li {
   margin-bottom: 50px;
   padding: 5px 8px;
 }
-.skill-item:nth-of-type(odd) {
-  background-color: rgba(145, 250, 168, 0.274);
-}
-.skill-item:nth-of-type(even) {
-  background-color: rgba(148, 202, 160, 0.349);
-}
 
 .skill-item:last-child {
   margin-bottom: 0;
@@ -376,8 +370,11 @@ li {
 }
 
 .skill-name {
+  padding-left: 5px;
   margin-bottom: 3px;
+  background-color: rgba(145, 250, 168, 0.274);
 }
+
 
 /*--------------------------------
  Hobby
