--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -139,6 +139,10 @@ li {
   width: 100%;
 }
 
+.imggazo {
+  max-width: 50%;
+}
+
 /*--------------------------------
  メインビジュアル
 ---------------------------------*/
@@ -407,7 +411,10 @@ li {
 }
 
 .hobby-name {
+  padding-left: 5px;
   margin-bottom: 3px;
+  background-color: rgba(145, 250, 168, 0.274);
+  
 }
 
 /*--------------------------------
