--- a/portfolio/index/word.css
+++ b/portfolio/index/word.css
@@ -1,5 +1,75 @@
 @charset "UTF-8";
 
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 4;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 5px 10px -6px rgba(0,0,0,.1);
+  }
+  
+  .header .inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 40px;
+  }
+  
+  .header-logo {
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-right: 2px;
+    letter-spacing: .05em;
+  }
+  
+  .header-logo a {
+    color: #333;
+  }
+  
+  .header-nav-list {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .header-nav-item:not(:last-child) {
+    margin-right: 20px;
+  }
+  
+  .header-nav-item a {
+    position: relative;
+    font-size: 13px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 0;
+    transition: .3s;
+    letter-spacing: .05em;
+    color: #333;
+  }
+  .header-nav-item a:after {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 3px;
+    content: "";
+    transition: .3s;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    background-color: #333;
+  }
+  
+  .header-nav-item a:hover:after {
+    width: 100%;
+  }
+  
+  .imggazo {
+    max-width: 20%;
+  }
+  
+
+
 .back {
     padding-left: 1vh;
     padding-bottom: 2vh;
