--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -675,12 +675,12 @@ li {
     margin-bottom: 35px;
     padding: 5px 8px;
   }
-  .skill-item:nth-of-type(odd) {
+  /* .skill-item:nth-of-type(odd) {
     background-color: rgba(145, 250, 168, 0.274);
   }
   .skill-item:nth-of-type(even) {
     background-color: rgba(148, 202, 160, 0.349);
-  }
+  } */
 
   .skill-item:last-child {
     margin-bottom: 0;
