--- a/challenge/ch.css
+++ b/challenge/ch.css
@@ -1,1 +1,71 @@
- 
+@charset "UTF-8";
+
+* {
+    box-sizing: border-box;
+    font-family: メイリオ;
+    margin: 0;
+}
+body {
+    background: #f8d8bf;
+    margin: 0;
+    padding: 0;
+}
+article{
+    width: 800px;
+    max-width: 90%;
+    background: #fff;
+    margin: 20px auto;
+    padding: 20px;
+    position: relative;
+}
+header {
+    padding: 10px;
+    background: #f83;
+    color: #fff;
+    position: absolute;
+    top: 40px;
+    z-index: 0;
+}
+section {
+    padding: 20px;
+    border: 1px solid #ccc;
+}
+img {
+    display: block;
+    margin-bottom: 40px;
+    height: auto;
+    width: 100vw;
+    max-width: 100%;
+}
+h2 {
+    margin-bottom: 10px;
+    color: #f83;
+}
+ul, ol {
+    padding-left: 1.2em;
+}
+address {
+    text-align: center;
+}
+
+.flexContainer {
+    display: flex;
+    justify-content: space-around;
+}
+.btnArea {
+    margin-top: 40px;
+}
+p.btn {
+    margin: 0 auto 40px;
+    width: 300px;
+    text-align: center;
+}
+p.btn a {
+    display: block;
+    padding: 20px;
+    background: #f83;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 1.2em;
+}
