--- a/portfolio/index/word.css
+++ b/portfolio/index/word.css
@@ -8,10 +8,15 @@ a {
 }
 body {
   background: #f9f4ef;
+  margin: 0;
+}
+main {
+  margin-top: 90px;
 }
   /*  */
   .header {
     position: fixed;
+    margin-bottom: 10px;
     top: 0;
     z-index: 4;
     width: 100%;
