--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -9,12 +9,11 @@ body {
 a {
   transition: opacity .3s;
   text-decoration: none;
-  color: #8c7851;
-  text-decoration: none;
+  color: #f25042;
 }
 a:hover{
   font-size: 1.1em;
-  color: #f25042;
+  color: #8c7851;
 }
 
 img {
@@ -249,6 +248,7 @@ li {
 
 .btn-denim:hover {
   border-style: solid;
+  color: #FFF;
 }
 
 .btn-open {
